# mta-server-bootstrap

./: .gitignore  Makefile.publish
fastapi_server/: pyproject.toml
fastapi_server/examples/quickstart/: Makefile  pyproject.toml
fastapi_server/fastapi_server/bootstrap/addons/: _discover.py  environment_addon.py  lifecycle_addon.py
fastapi_server/fastapi_server/bootstrap/core/: orchestrator.py
fastapi_server/fastapi_server/bootstrap/registry/: ctx.py  loader_logger.py
fastify_server/src/addons/: environment.addon.ts  lifecycle.addon.ts
fastify_server/src/core/: orchestrator.ts
fastify_server/src/registry/: loader_logger.ts
